<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/side_navigation_menu_item1"
        android:icon="@drawable/icon_home_menu"
        android:title="@string/title1"/>

    <item
        android:id="@+id/side_navigation_menu_item2"
        android:icon="@drawable/icon_search_menu"
        android:title="@string/title2"/>
    <item
        android:id="@+id/side_navigation_menu_item3"
        android:icon="@drawable/icon_review_menu"
        android:title="@string/title3"/>
    <item
        android:id="@+id/side_navigation_menu_item4"
        android:icon="@drawable/icon_maps_menu"
        android:title="@string/title4"/>
    <item
        android:id="@+id/side_navigation_menu_item5"
        android:icon="@drawable/icon_logout_menu"
        android:title="@string/title5"/>

</menu>